compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bit_arrays__bit_array_literal_string_constant_is_treated_as_utf8.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "const a = <<\"hello\", \" \", \"world\">>"
---
import { toBitArray, stringBits } from "../rakun.mjs";

const a = /* @__PURE__ */ toBitArray([
  stringBits("hello"),
  stringBits(" "),
  stringBits("world"),
]);
