compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bit_arrays__bit_array_literal_string_is_treated_as_utf8.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn main() {\n  <<\"hello\", \" \", \"world\">>\n}"
---
----- SOURCE CODE

pub fn main() {
  <<"hello", " ", "world">>
}

----- COMPILED JAVASCRIPT
import { toBitArray, stringBits } from "../rakun.mjs";

export function main() {
  return toBitArray([stringBits("hello"), stringBits(" "), stringBits("world")]);
}
