compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bit_arrays__bit_array_literal_string_pattern_is_treated_as_utf8.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn main() {\n  case <<>> {\n    <<\"a\", \"b\", _:bytes>> -> 1\n    _ -> 2\n  }\n}"
---
import { toBitArray } from "../rakun.mjs";

export function main() {
  let $ = toBitArray([]);
  if ($.byteAt(0) === 0x61 && $.byteAt(1) === 0x62 && $.length >= 2) {
    return 1;
  } else {
    return 2;
  }
}
