compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bit_arrays__bit_string.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 225
expression: "\nfn go(x) {\n  <<x:bits>>\n}\n"
---
----- SOURCE CODE

fn go(x) {
  <<x:bits>>
}


----- COMPILED JAVASCRIPT
import { toBitArray } from "../rakun.mjs";

function go(x) {
  return toBitArray([x.buffer]);
}
