compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bit_arrays__bit_string_typescript.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x) {\n  <<x:bits>>\n}\n"
---
import type * as _ from "../rakun.d.mts";

export function go(x: _.BitArray): _.BitArray;
