compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bit_arrays__empty_match.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 269
expression: "\nfn go(x) {\n  let assert <<>> = x\n}\n"
---
import { makeError } from "../rakun.mjs";

function go(x) {
  if (!(x.length == 0)) {
    throw makeError(
      "let_assert",
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x }
    )
  }
  return x;
}
