compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bit_arrays__explicit_sized.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<256:size(64)>>\n}\n"
---
----- SOURCE CODE

fn go() {
  <<256:size(64)>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, sizedInt } from "../rakun.mjs";

function go() {
  return toBitArray([sizedInt(256, 64, true)]);
}
