compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bit_arrays__float_little_endian.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<1.1:float-little>>\n}\n"
---
----- SOURCE CODE

fn go() {
  <<1.1:float-little>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, sizedFloat } from "../rakun.mjs";

function go() {
  return toBitArray([sizedFloat(1.1, 64, false)]);
}
