compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bit_arrays__float_sized_big_endian.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<1.1:float-32-big>>\n}\n"
---
----- SOURCE CODE

fn go() {
  <<1.1:float-32-big>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, sizedFloat } from "../rakun.mjs";

function go() {
  return toBitArray([sizedFloat(1.1, 32, true)]);
}
